--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,19 @@
   height: 40vmin;
   pointer-events: none;
 }
+.welcome{
+  display: flex;
+  flex-direction: row;
+  font-size: 18px;
+  font-weight: bold;
+  color: red;
+  justify-content: center;
+  align-items: center;
 
+}
+main{
+  padding:0 15px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -15,7 +27,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
