--- a/src/container/home/index.scss
+++ b/src/container/home/index.scss
@@ -1,6 +1,7 @@
 
 $r:#F00;
 @mixin box(){
+  width:100%;
   height:300px;
   border:1px solid #999;
 }
@@ -21,6 +22,12 @@ $r:#F00;
   main{
     padding:0 15px;
   }
-}
 
+}
+.one {
+  width: 200px;
+  height: 200px;
+  font-size: 50px;
+  background: pink;
+}
 
